{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 213,
  "lineage": "82c3eb44-28ef-efe8-a2bb-64cd3e669e74",
  "resources": [
    {
      "module": "module.app_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561459443:security-group/sg-0fa5bbdd2557a739c",
            "description": "Security group for application servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa5bbdd2557a739c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-app-sg",
            "name_prefix": "",
            "owner_id": "503561459443",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "Name": "dev-app-sg",
              "Owner": "InfraTeam"
            },
            "tags_all": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "ManagedBy": "Terraform",
              "Name": "dev-app-sg",
              "Owner": "InfraTeam",
              "Project": "InfrastructureProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-072ea6244cb481a8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-4061200705",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fa5bbdd2557a739c",
            "security_group_rule_id": "sgr-0a6c6c2958e5fa185",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.aws_security_group.main",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP from anywhere",
            "from_port": 80,
            "id": "sgrule-1123901439",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fa5bbdd2557a739c",
            "security_group_rule_id": "sgr-0b43fc4bedf4df210",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.aws_security_group.main",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS from anywhere",
            "from_port": 443,
            "id": "sgrule-3469971736",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fa5bbdd2557a739c",
            "security_group_rule_id": "sgr-09dbdbc321ecec51d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.aws_security_group.main",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561459443:security-group/sg-07dd6f8facdd2d571",
            "description": "Security group for RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07dd6f8facdd2d571",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow all traffic within the VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ElasticBeanstalkProject-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "503561459443",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ElasticBeanstalkProject-dev-rds-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "ElasticBeanstalkProject-dev-rds-sg",
              "Project": "InfrastructureProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-072ea6244cb481a8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.db_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561459443:security-group/sg-080a2ff2c903c3bff",
            "description": "Security group for RDS database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080a2ff2c903c3bff",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow database access from application servers",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fa5bbdd2557a739c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dev-db-sg",
            "name_prefix": "",
            "owner_id": "503561459443",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "Name": "dev-db-sg",
              "Owner": "InfraTeam"
            },
            "tags_all": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "ManagedBy": "Terraform",
              "Name": "dev-db-sg",
              "Owner": "InfraTeam",
              "Project": "InfrastructureProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-072ea6244cb481a8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.aws_security_group.main",
            "module.app_security_group.aws_security_group_rule.allow_all_outbound",
            "module.app_security_group.aws_security_group_rule.egress_cidr",
            "module.app_security_group.aws_security_group_rule.egress_sg",
            "module.app_security_group.aws_security_group_rule.ingress_cidr",
            "module.app_security_group.aws_security_group_rule.ingress_sg",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.db_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-2620948889",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-080a2ff2c903c3bff",
            "security_group_rule_id": "sgr-0f6b4ce002b5bbc41",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.aws_security_group.main",
            "module.app_security_group.aws_security_group_rule.allow_all_outbound",
            "module.app_security_group.aws_security_group_rule.egress_cidr",
            "module.app_security_group.aws_security_group_rule.egress_sg",
            "module.app_security_group.aws_security_group_rule.ingress_cidr",
            "module.app_security_group.aws_security_group_rule.ingress_sg",
            "module.db_security_group.aws_security_group.main",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.db_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow database access from application servers",
            "from_port": 3306,
            "id": "sgrule-705198757",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-080a2ff2c903c3bff",
            "security_group_rule_id": "sgr-082d2ea817f04d04f",
            "self": false,
            "source_security_group_id": "sg-0fa5bbdd2557a739c",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.aws_security_group.main",
            "module.app_security_group.aws_security_group_rule.allow_all_outbound",
            "module.app_security_group.aws_security_group_rule.egress_cidr",
            "module.app_security_group.aws_security_group_rule.egress_sg",
            "module.app_security_group.aws_security_group_rule.ingress_cidr",
            "module.app_security_group.aws_security_group_rule.ingress_sg",
            "module.db_security_group.aws_security_group.main",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e04d86aab1488a5f",
            "arn": "arn:aws:ec2:us-east-1:503561459443:elastic-ip/eipalloc-0e04d86aab1488a5f",
            "association_id": "eipassoc-0b6a3e46b59cd946a",
            "domain": "vpc",
            "id": "eipalloc-0e04d86aab1488a5f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0126b8419aac4a491",
            "private_dns": "ip-10-0-1-180.ec2.internal",
            "private_ip": "10.0.1.180",
            "public_dns": "ec2-54-84-127-197.compute-1.amazonaws.com",
            "public_ip": "54.84.127.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "Name": "dev-nat-eip-1",
              "Owner": "InfraTeam"
            },
            "tags_all": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "ManagedBy": "Terraform",
              "Name": "dev-nat-eip-1",
              "Owner": "InfraTeam",
              "Project": "InfrastructureProject"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e04d86aab1488a5f",
            "association_id": "eipassoc-0b6a3e46b59cd946a",
            "connectivity_type": "public",
            "id": "nat-050ec878d62608098",
            "network_interface_id": "eni-0126b8419aac4a491",
            "private_ip": "10.0.1.180",
            "public_ip": "54.84.127.197",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0602ce6df173baaf6",
            "tags": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "Name": "dev-nat-gateway-1",
              "Owner": "InfraTeam"
            },
            "tags_all": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "ManagedBy": "Terraform",
              "Name": "dev-nat-gateway-1",
              "Owner": "InfraTeam",
              "Project": "InfrastructureProject"
            }
          },
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c3a39b37eaade24e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-050ec878d62608098",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c3a39b37eaade24e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.nat.aws_nat_gateway.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e9368ce07320e71d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-050ec878d62608098",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e9368ce07320e71d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.nat.aws_nat_gateway.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561459443:internet-gateway/igw-009a8b959001058fd",
            "id": "igw-009a8b959001058fd",
            "owner_id": "503561459443",
            "tags": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "Name": "dev-igw",
              "Owner": "InfraTeam"
            },
            "tags_all": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "ManagedBy": "Terraform",
              "Name": "dev-igw",
              "Owner": "InfraTeam",
              "Project": "InfrastructureProject"
            },
            "vpc_id": "vpc-072ea6244cb481a8a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561459443:route-table/rtb-0c3a39b37eaade24e",
            "id": "rtb-0c3a39b37eaade24e",
            "owner_id": "503561459443",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-050ec878d62608098",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "Name": "dev-private-route-table-1",
              "Owner": "InfraTeam"
            },
            "tags_all": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "ManagedBy": "Terraform",
              "Name": "dev-private-route-table-1",
              "Owner": "InfraTeam",
              "Project": "InfrastructureProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-072ea6244cb481a8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561459443:route-table/rtb-0e9368ce07320e71d",
            "id": "rtb-0e9368ce07320e71d",
            "owner_id": "503561459443",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-050ec878d62608098",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "Name": "dev-private-route-table-2",
              "Owner": "InfraTeam"
            },
            "tags_all": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "ManagedBy": "Terraform",
              "Name": "dev-private-route-table-2",
              "Owner": "InfraTeam",
              "Project": "InfrastructureProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-072ea6244cb481a8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561459443:route-table/rtb-042ea468da4d78936",
            "id": "rtb-042ea468da4d78936",
            "owner_id": "503561459443",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-009a8b959001058fd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "Name": "dev-public-route-table",
              "Owner": "InfraTeam"
            },
            "tags_all": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "ManagedBy": "Terraform",
              "Name": "dev-public-route-table",
              "Owner": "InfraTeam",
              "Project": "InfrastructureProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-072ea6244cb481a8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c00ac9ea37472281",
            "route_table_id": "rtb-0c3a39b37eaade24e",
            "subnet_id": "subnet-029b15d4301534f33"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbbe289e2da8c47c",
            "route_table_id": "rtb-0e9368ce07320e71d",
            "subnet_id": "subnet-09078a117347508ae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02933d55b384218e3",
            "route_table_id": "rtb-042ea468da4d78936",
            "subnet_id": "subnet-0602ce6df173baaf6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a950f067a9e833a5",
            "route_table_id": "rtb-042ea468da4d78936",
            "subnet_id": "subnet-0d4a85b6d14970e02"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561459443:subnet/subnet-029b15d4301534f33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029b15d4301534f33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503561459443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "Name": "dev-private-subnet-1",
              "Owner": "InfraTeam",
              "Tier": "Private"
            },
            "tags_all": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "ManagedBy": "Terraform",
              "Name": "dev-private-subnet-1",
              "Owner": "InfraTeam",
              "Project": "InfrastructureProject",
              "Tier": "Private"
            },
            "vpc_id": "vpc-072ea6244cb481a8a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561459443:subnet/subnet-09078a117347508ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09078a117347508ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503561459443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "Name": "dev-private-subnet-2",
              "Owner": "InfraTeam",
              "Tier": "Private"
            },
            "tags_all": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "ManagedBy": "Terraform",
              "Name": "dev-private-subnet-2",
              "Owner": "InfraTeam",
              "Project": "InfrastructureProject",
              "Tier": "Private"
            },
            "vpc_id": "vpc-072ea6244cb481a8a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561459443:subnet/subnet-0602ce6df173baaf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0602ce6df173baaf6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503561459443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "Name": "dev-public-subnet-1",
              "Owner": "InfraTeam",
              "Tier": "Public"
            },
            "tags_all": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "ManagedBy": "Terraform",
              "Name": "dev-public-subnet-1",
              "Owner": "InfraTeam",
              "Project": "InfrastructureProject",
              "Tier": "Public"
            },
            "vpc_id": "vpc-072ea6244cb481a8a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561459443:subnet/subnet-0d4a85b6d14970e02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4a85b6d14970e02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503561459443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "Name": "dev-public-subnet-2",
              "Owner": "InfraTeam",
              "Tier": "Public"
            },
            "tags_all": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "ManagedBy": "Terraform",
              "Name": "dev-public-subnet-2",
              "Owner": "InfraTeam",
              "Project": "InfrastructureProject",
              "Tier": "Public"
            },
            "vpc_id": "vpc-072ea6244cb481a8a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503561459443:vpc/vpc-072ea6244cb481a8a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06236b52a38c223df",
            "default_route_table_id": "rtb-01174e03e04061850",
            "default_security_group_id": "sg-0458cbf705ef815c9",
            "dhcp_options_id": "dopt-0c508c9a388dac203",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-072ea6244cb481a8a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01174e03e04061850",
            "owner_id": "503561459443",
            "tags": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "Name": "dev-vpc",
              "Owner": "InfraTeam"
            },
            "tags_all": {
              "Application": "WebApp",
              "CostCenter": "10001",
              "ManagedBy": "Terraform",
              "Name": "dev-vpc",
              "Owner": "InfraTeam",
              "Project": "InfrastructureProject"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}